# finch-tensor-lite

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  array-api-skips.txt  asv.conf.json  finch-dependencies.drawio  foo.py  index.html  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  pytest.ini  stats_results.csv  test-macos-latest-Python-3.11.xml  test1.py  test_file.py
.github/workflows/: benchmark.yml  ci.yml  docs.yml  publish-docs.yml  publish.yml
autoapi/finch/: index.html
autoapi/finch/algebra/: index.html
autoapi/finch/array_namespace_info/: index.html
autoapi/finch/autoschedule/: index.html
autoapi/finch/codegen/: index.html
autoapi/finch/compile/: index.html
autoapi/finch/compile_jl/: index.html
autoapi/finch/finch_assembly/: index.html
autoapi/finch/finch_einsum/: index.html
autoapi/finch/finch_fused/: index.html
autoapi/finch/finch_logic/: index.html
autoapi/finch/finch_notation/: index.html
autoapi/finch/interface/: index.html
autoapi/finch/symbolic/: index.html
autoapi/finch/tensor/: index.html
autoapi/finch/util/: index.html
autoapi/finchlite/: index.html
autoapi/finchlite/algebra/: index.html
autoapi/finchlite/array_namespace_info/: index.html
autoapi/finchlite/autoschedule/: index.html
autoapi/finchlite/codegen/: index.html
autoapi/finchlite/compile/: index.html
autoapi/finchlite/compile_jl/: index.html
autoapi/finchlite/finch_assembly/: index.html
autoapi/finchlite/finch_einsum/: index.html
autoapi/finchlite/finch_fused/: index.html
autoapi/finchlite/finch_logic/: index.html
autoapi/finchlite/finch_notation/: index.html
autoapi/finchlite/interface/: index.html
autoapi/finchlite/symbolic/: index.html
autoapi/finchlite/tensor/: index.html
autoapi/finchlite/util/: index.html
autoapi/summary/: index.html
benchmarks/: autoscheduler_benchmarks.py  benchmarks.py  conftest.py  galley_benchmarks.py  galley_bnb_compile_benchmarks.py  galley_compile_benchmarks.py  galley_component_benchmarks.py  galley_component_compile_benchmarks.py  jit_benchmarks.py  simple_benchmarks.py  stats.py  stats_benchmarks.py  test_galley.py  test_galley_branch_and_bound_benchmark.py  test_jit.py  test_simple.py  utils.py
ci_benchmarks/: jit_benchmarks.py  simple_benchmarks.py
docs/: index.md
results/: DCStats_matmul_matmul_dense_small.csv  DCStats_matmul_matmul_sparse_small.csv  DatabaseStats_matmul_matmul_dense_small.csv  DatabaseStats_matmul_matmul_sparse_small.csv  DenseStats_matmul_matmul_dense_small.csv  DenseStats_matmul_matmul_sparse_small.csv  UniformStats_matmul_matmul_dense_small.csv  UniformStats_matmul_matmul_sparse_small.csv
src/finch/: README.md  __init__.py  array_namespace_info.py
src/finch/algebra/: __init__.py  algebra.py  ftypes.py  operator.py  tensor.py
src/finch/autoschedule/: __init__.py  cache.py  capture.py  compiler.py  default_schedulers.py  einsum.py  executor.py  formatter.py  galley_optimize.py  loop_ordering.py  normalize.py  optimize.py  smart_formatter.py  stages.py  util.py
src/finch/buffer/: __init__.py  buffer.py
src/finch/codegen/: __init__.py  c.py  (+4 more)
src/finchlite/: __init__.py  array_namespace_info.py  juliapkg.json
tests/: conftest.py  nodes.py  safebufferaccess.py  test1.py  test_algebra.py  test_array_api.py  test_assembly_dataflow.py  test_assembly_interpreter.py  test_assembly_parser.py  test_assembly_type_checker.py  test_cache.py  test_cache_loader.py  test_codegen.py  test_dataflow.py  test_einsum.py  test_einsum_lowerer.py  test_format_selector.py  test_fused.py  test_fused_parser.py  test_galley.py  test_galleyOpimizer_1.py  test_galleyOptimizer_2.py  test_galleyOptimizer_3.py  test_galleyOptimizer_4.py  test_galleyOptimizer_5.py  test_galleyOptimizer_6.py  test_galleyOptimizer_7.py  test_galleyOptimizer_8.py  test_galleyOptimizer_9.py  test_galley_benchmark_log.txt  test_galley_benchmarks.py  test_galley_branch_and_bound.py  test_galley_logical_optimizer.py  test_galley_optimizer_pipeline.py  test_galley_tensor_stats.py  test_insum_lowerer.py  test_interface.py  test_issues.py  test_julia_backend.py  test_logic_compiler.py  (+24 more)
tests/buffers/: test_safe_buffer.py
tests/data/: web-NotreDame.mat
tests/printer/: test_ntn_printer.py
tests/reference/: test_asm_cfg_printer_comprehensive.txt  test_asm_cfg_printer_dot.txt  test_asm_cfg_printer_if.txt  test_asm_copy_propagation_comprehensive.txt  test_asm_copy_propagation_debug_comprehensive.txt  test_asm_copy_propagation_debug_dot.txt  test_asm_copy_propagation_debug_if.txt  test_asm_copy_propagation_dot.txt  test_asm_copy_propagation_if.txt  test_asm_print.txt  test_asm_printer_comprehensive.txt  test_asm_printer_if.txt  test_asm_sparse_elemwise.txt  test_dense_matmul_mlir_regression.mlir  test_dot_product_regression_compiler0__c_NumpyBuffer_.c  test_dot_product_regression_compiler1__py_NumpyBuffer_.py  test_dot_product_regression_malloc_compiler0__c_MallocBuffer_.c  test_e2e_mlir_matmul_regression.mlir  test_einsum_printer.txt  test_jit_dependent_loop_inserted_code.py  test_jit_if_branch_inserted_code.py  test_jit_local_module_function_inserted_code.py  test_jit_module_function_inserted_code.py  test_jit_return_expr_inserted_code.py  test_jit_scalar_loop_inserted_code.py  test_jit_straight_line_inserted_code.py  test_jit_two_independent_ops_inserted_code.py  test_jit_while_inserted_code.py  test_log_printer.txt  test_logic_compiler_inplace_program.txt  test_logic_compiler_program.txt  test_logic_compiler_program_inplace.txt  test_logic_standardizer_inplace_program.txt  test_matmul_mlir_regression.mlir  test_matrix_multiplication_regression.txt  test_ntn_cfg_printer_simple.txt  test_ntn_printer.txt  test_print_compiler0_.txt  test_print_compiler1_.txt  test_safe_loadstore_regression_compiler0__c_.c  (+8 more)
tests/references/: README.md
tests/regressions/: Readme.md
tests/scripts/: nodes.py  safebufferaccess.py
tests/test_regressions/: test_c_program.c  test_regex_substitution_patterns.txt  test_tree_regression.txt
tests/util/: nodes.py
(+643 files in other folders)
