[project]
name = "finch-tensor-lite"
description = ""
version = "0.5.2"
readme = "README.md"
authors = [{name = "Willow Ahrens", email = "willow.marie.ahrens@gmail.com"}]
requires-python = '>=3.11,<3.14'
dependencies = ['numpy>=1.19,<2.4', 'numba>=0.61,<0.63.1', 'donfig>=0.8.1.post1,<0.9.0', "lark (>=1.3.0,<2.0.0)", "scipy>=1.7,<1.17"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4,<7.6",
    "pytest-json-report>=1.5.0,<1.6",
    "hypothesis>=6.130.5,<7",
    "ndindex>=1.8,<2",
    "pre-commit>=3.6.0,<3.9",
    "pytest-cov>=4.1.0,<4.2",
    "sparse>=0.17.0,<0.17.1",
    "scipy>=1.7,<1.17",
    "mypy==1.15.*",
    "pytest-mypy==1.*",
    "pytest-regressions~=2.8.1",
]
benchmark = [
    "pytest-codspeed>=5",
]
julia = [
    "juliapkg>=0.1.16,<0.2.0",
    "juliacall>=0.9.24,<0.10.0",
]


[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "finchlite"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "linux-ppc64le", "osx-arm64", "win-64"]
preview = ["pixi-build"]
requires-pixi = ">=0.71.0"

# finch-tensor-lite package definition

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"

[tool.pixi.package.build.config]
ignore-pypi-mapping = false

# workspace environments

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }
test-c = { features = ["test", "c"], solve-group = "default" }
test-mlir = { features = ["test", "mlir"], solve-group = "mlir" }
mindeps = { features = ["test", "mindeps"], solve-group = "mindeps" }
benchmark = { features = ["test", "benchmark"], solve-group = "default" }
c = { features = ["c"], solve-group = "default" }
c-gcc = { features = ["c-gcc"], solve-group = "default" }
c-clang = { features = ["c-clang"], solve-group = "default" }
mlir = { features = ["mlir"], solve-group = "mlir" }
julia = { features = ["julia"], solve-group = "julia" }
test-julia = { features = ["test", "julia"], solve-group = "julia" }
pre-commit = { features = ["pre-commit"], no-default-feature = true }

# default feature definition

[tool.pixi.dependencies]
finch-tensor-lite.path = "."

[tool.pixi.dev]
finch-tensor-lite.path = "."

[tool.pixi.tasks]
compile = "python -c 'import finchlite'"

# non-default feature definitions

[tool.pixi.feature.test.dependencies]
pytest = ">=7.4.4,<7.6"
pytest-json-report = ">=1.5.0,<1.6"
hypothesis = ">=6.130.5,<7"
ndindex = ">=1.8,<2"
pre-commit = ">=3.6.0,<3.9"
pytest-cov = ">=4.1.0,<4.2"
sparse = ">=0.17.0,<0.17.1"
scipy = ">=1.7,<1.17"
mypy = "1.15.*"
pytest-regressions = "~=2.8.1"

[tool.pixi.feature.test.pypi-dependencies]
pytest-mypy = ">=1,<2"

[tool.pixi.feature.test.tasks.test]
cmd = "python -m pytest -m 'not c_backend'"
depends-on = ["compile"]
default-environment = "test"

[tool.pixi.feature.test.tasks.test-c]
cmd = "python -m pytest -m c_backend"
depends-on = ["compile"]
default-environment = "test-c"

[tool.pixi.feature.test.tasks.test-mlir]
cmd = "python -m pytest -m mlir_backend"
depends-on = ["compile"]
default-environment = "test-mlir"

[tool.pixi.feature.benchmark.tasks.benchmark]
cmd = "pytest --codspeed benchmarks/"
depends-on = ["compile"]
default-environment = "benchmark"

[tool.pixi.feature.test.tasks.type-check]
cmd = "python -m mypy"
default-environment = "test"

[tool.pixi.feature.mindeps.dependencies]
python = "3.11.*"

[tool.pixi.feature.benchmark]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "win-64"]

[tool.pixi.feature.benchmark.dependencies]
pytest-codspeed = "*"

[tool.pixi.feature.julia]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "win-64"]

[tool.pixi.feature.julia.pypi-dependencies]
juliapkg = ">=0.1.16,<0.2.0"
juliacall = ">=0.9.24,<0.10.0"

[tool.pixi.feature.c.dependencies]
c-compiler = "*"

[tool.pixi.feature.c-gcc.dependencies]
gcc = "*"

[tool.pixi.feature.c-gcc.activation.env]
CC = "gcc"

[tool.pixi.feature.c-clang.dependencies]
clang = "*"

[tool.pixi.feature.c-clang.activation.env]
CC = "clang"

[tool.pixi.feature.mlir.dependencies]
mlir-python-bindings = ">=22.1,<23"

[tool.pixi.feature.pre-commit.dependencies]
pre-commit = "*"

[tool.pixi.feature.pre-commit.tasks]
pre-commit-install = "pre-commit install"
pre-commit = "pre-commit run -a"


[tool.ruff]
extend-exclude = [
    "tests/reference",
]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP", "YTT", "BLE", "C4", "T10", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "PGH", "FLY", "NPY", "PERF", "RUF022", "TID"]
ignore = ["PYI024"]

[tool.ruff.lint.isort.sections]
numpy = ["numpy", "numpy.*", "scipy", "scipy.*"]
pytest = ["pytest", "pytest.*"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "pytest",
    "numpy",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "tests/reference",
]
files = [
    "src",
    "tests",
]
