[project]
name = "finch-tensor-lite"
description = ""
version = "0.5.2"
readme = "README.md"
authors = [{name = "Willow Ahrens", email = "willow.marie.ahrens@gmail.com"}]
requires-python = '>=3.11,<4'
dependencies = [
    "numpy>=2.0,<3",
    "numba>=0.61,<2",
    "donfig>=0.8.1.post1,<0.9.0",
    "lark>=1.3.0,<2",
    "scipy>=1.7,<2",
]

[project.optional-dependencies]
julia = [
    "juliapkg>=0.1.16,<0.2.0",
    "juliacall>=0.9.24,<0.10.0",
]
mlir = [
    "pyyaml>=6.0.1",
]

[dependency-groups]
test = [
    "pytest>=7.4.4",
    "pytest-json-report>=1.5.0",
    "hypothesis>=6.130.5",
    "ndindex>=1.8,<2",
    "pre-commit>=3.6.0,<5",
    "pytest-cov>=4.1.0",
    "sparse>=0.17.0",
    "scipy>=1.7,<2",
    "mypy>=1.15,<2",
    "pytest-mypy>=1,<2",
    "pytest-regressions>=2.8.1,<3",
]
benchmark = [
    "pytest-codspeed>=5",
    {include-group = "test"},
]


[build-system]
requires = ["uv_build>=0.11.25"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "finchlite"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
    { name = "linux-amd64", platform = "linux-64", glibc = "2.34" },
    { name = "linux-arm64", platform = "linux-aarch64", glibc = "2.34" },
    { name = "linux-ppc64", platform = "linux-ppc64le", glibc = "2.34" },
    { name = "macos-arm64", platform = "osx-arm64", macos = "15.0" },
    { name = "win-amd64", platform = "win-64" },
]
preview = ["pixi-build"]
requires-pixi = ">=0.71.0"

# finch-tensor-lite package definition

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"

[tool.pixi.package.build.config]
ignore-pypi-mapping = false

# workspace environments

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }
test-c = { features = ["test", "c"], solve-group = "default" }
test-mlir = { features = ["test", "mlir"], solve-group = "mlir" }
mindeps = { features = ["test", "mindeps"], solve-group = "mindeps" }
benchmark = { features = ["test", "benchmark"], solve-group = "default" }
c = { features = ["c"], solve-group = "default" }
mlir = { features = ["mlir"], solve-group = "mlir" }
c-gcc = { features = ["c-gcc"], solve-group = "default" }
c-clang = { features = ["c-clang"], solve-group = "default" }
julia = { features = ["julia"], solve-group = "julia" }
test-julia = { features = ["test", "julia"], solve-group = "julia" }
pre-commit = { features = ["pre-commit"], no-default-feature = true }

# default feature definition

[tool.pixi.dependencies]
finch-tensor-lite.path = "."

[tool.pixi.dev]
finch-tensor-lite.path = "."

[tool.pixi.tasks]
compile = "python -c 'import finchlite'"

[tool.pixi.feature.test.tasks.test]
cmd = "python -m pytest -m 'not c_backend and not mlir_backend'"
depends-on = ["compile"]
default-environment = "test"

[tool.pixi.feature.test.tasks.test-c]
cmd = "python -m pytest -m c_backend"
depends-on = ["compile"]
default-environment = "test-c"

[tool.pixi.feature.test.tasks.test-mlir]
cmd = "python -m pytest -m mlir_backend"
depends-on = ["compile"]
default-environment = "test-mlir"

[tool.pixi.feature.julia.tasks.test-julia]
cmd = "python -m pytest tests/test_julia_backend.py"
depends-on = ["compile"]
default-environment = "test-julia"

[tool.pixi.feature.benchmark.tasks.benchmark]
cmd = "pytest --codspeed benchmarks/"
depends-on = ["compile"]
default-environment = "benchmark"

[tool.pixi.feature.test.tasks.type-check]
cmd = "python -m mypy"
default-environment = "test"

[tool.pixi.feature.mindeps.dependencies]
python = "3.11.*"

[tool.pixi.feature.benchmark]
platforms = ["linux-amd64", "linux-arm64", "macos-arm64", "win-amd64"]

[tool.pixi.feature.benchmark.dependencies]
pytest-codspeed = "*"

[tool.pixi.feature.julia]
platforms = ["linux-amd64", "linux-arm64", "macos-arm64", "win-amd64"]

[tool.pixi.feature.c.dependencies]
c-compiler = "*"

[tool.pixi.feature.c-gcc.dependencies]
gcc = "*"

[tool.pixi.feature.c-gcc.activation.env]
CC = "gcc"

[tool.pixi.feature.c-clang.dependencies]
clang = "*"

[tool.pixi.feature.c-clang.activation.env]
CC = "clang"

[tool.pixi.feature.mlir]
platforms = ["linux-amd64", "linux-arm64", "macos-arm64", "win-amd64"]

[tool.pixi.feature.mlir.dependencies]
python = "3.13.*"
mlir-python-bindings = ">=22.1.0,<23"

[tool.pixi.feature.pre-commit.dependencies]
pre-commit = "*"

[tool.pixi.feature.pre-commit.tasks]
pre-commit-install = "pre-commit install"
pre-commit = "pre-commit run -a"


[tool.ruff]
extend-exclude = [
    "tests/reference",
]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP", "YTT", "BLE", "C4", "T10", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "PGH", "FLY", "NPY", "PERF", "RUF022", "TID"]
ignore = ["PYI024"]

[tool.ruff.lint.isort.sections]
numpy = ["numpy", "numpy.*", "scipy", "scipy.*"]
pytest = ["pytest", "pytest.*"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "pytest",
    "numpy",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "tests/reference",
]
files = [
    "src",
    "tests",
]
